src/objects/Charket__WeChatTagAssignment__c.object
<CustomObject>
    <fields>
        <fullName>Charket__FollowerTagId__c</fullName>
        <externalId>true</externalId>
        <label>Follower Tag ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Charket__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatFollower__c</fullName>
        <label>WeChat Follower</label>
        <referenceTo>Charket__WeChatFollower__c</referenceTo>
        <relationshipLabel>WeChat Tag Assignments</relationshipLabel>
        <relationshipName>WeChatTagAssignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatTag__c</fullName>
        <label>WeChat Tag</label>
        <referenceTo>Charket__WeChatTag__c</referenceTo>
        <relationshipLabel>WeChat Tag Assignments</relationshipLabel>
        <relationshipName>WeChatTagAssignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>WeChat Tag Assignment</label>
    <nameField>
        <displayFormat>TA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WeChat Tag Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>